--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
     <footer>
         <h3>Made with <span class="heart"></span> by Alec Moschetti</h3>
     </footer>
-    <script src="scripts/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
